# HomeCraft

./: README.md
Arduino/Balancing_Robot/: Balancing_Robot.ino
C++/Radmor Interview Coding/Task1_Test/: .cproject
C++/Radmor Interview Coding/Task1_Test/Debug/: Task1_Test
C++/Radmor Interview Coding/Task1_Test/Debug/src/: subdir.mk
C++/Radmor Interview Coding/Task1_Test/src/: TXConverter.h  TXConverter_Test.cpp  TXConverter_Test.h  Task1_Test.cpp
C++/Radmor Interview Coding/Task2_Test/: .cproject  cmake_install.cmake  monthENG.txt  monthPOL.txt
C++/Radmor Interview Coding/Task2_Test/Debug/: Task2_Test  makefile  sources.mk
C++/Radmor Interview Coding/Task2_Test/Debug/GoogleTestLib/gtest/: subdir.mk
C++/Radmor Interview Coding/Task2_Test/Debug/UnitTests/: FunctionTask.d  Task2_Test.d  subdir.mk
C++/Radmor Interview Coding/Task2_Test/Debug/src/: Task2_Test.d  subdir.mk
C++/Radmor Interview Coding/Task2_Test/UnitTests/: Task2_Test.cpp
C++/Radmor Interview Coding/Task2_Test/headers/: FunctionTask.h
First Coding/Task1_Test/: .project
First Coding/Task1_Test/Debug/src/: TXConverter.d
First Coding/Task1_Test/src/: TXConverter.cpp
First Coding/Task2_Test/: CMakeLists.txt  Makefile  monthGER.txt
First Coding/Task2_Test/Debug/GoogleTestLib/gtest/: gtest-all.d
First Coding/Task2_Test/src/: FunctionTask.cpp
Task1_Test/Debug/: makefile
Task1_Test/Debug/src/: TXConverter_Test.d  Task1_Test.d
Task2_Test/: .project  CMakeCache.txt  program
Task2_Test/Debug/src/: FunctionTask.d
